# pyshaft-gomaa

./: context.md  get_by_id_docs.html  plan.md  request-response-request-3.md  rules.md  todo.md
pyshaft/: .pyshaft_store.json  HANDOFF.md  README.md  RETRY_EXAMPLES.md  REVIEW_PROMPT.md  conftest.py  how.md  pyproject.toml  pyshaft.toml  requirements.txt  test_regex.py  upgrade.md
pyshaft/SeleniumBase-4.48.0/: pyproject.toml
pyshaft/SeleniumBase-4.48.0/examples/: locale_code_test.py  raw_ahrefs.py  raw_bing_captcha.py  raw_driver_context.py  raw_form_turnstile.py  raw_games.py  raw_google.py  raw_login_context.py  raw_login_sb.py  raw_pixelscan.py  raw_recaptcha.py  raw_turnstile.py  raw_uc_mode.py  shadow_root_test.py  test_assert_elements.py  test_console_logging.py  test_contains_selector.py  test_detect_404s.py  test_docs_site.py  test_download_files.py  test_download_images.py  test_multiple_drivers.py  test_parse_soup.py  test_select_options.py  test_show_file_choosers.py  test_todomvc.py  test_url_asserts.py  youtube_search_test.py
pyshaft/docs/maintenance/: index.html
pyshaft/my_automation_project/tests/: conftest.py
pyshaft/my_enterprise_project/: pytest.ini
pyshaft/pyshaft/: __init__.py  cli.py  config.py  data_decorators.py  data_pipeline.py  exceptions.py  fixtures.py  session.py  testdata.py  utils.py
pyshaft/pyshaft-report2/: data.json  index.html  report.xml
pyshaft/pyshaft/api/: __init__.py  builder.py  client.py  methods.py  response.py  retryable_response.py  store.py
pyshaft/pyshaft/core/: __init__.py  action_runner.py  driver_factory.py  locator.py  retry_utils.py  step_logger.py  wait_engine.py
pyshaft/pyshaft/recorder/: __init__.py  __main__.py  app.py  browser_bridge.py  code_generator.py  command_palette.py  element_popup.py  inspector_panel.py  io_manager.py  main_window.py  models.py  step_editor_dialog.py  step_list_panel.py  theme.py  workflow_view.py
pyshaft/pyshaft/report/: __init__.py  collector.py  flask_app.py  html_renderer.py  json_exporter.py  junit_writer.py  models.py  screenshot_capture.py  video_recorder.py
pyshaft/pyshaft/web/: __init__.py  alerts.py  aria.py  assertions.py  collections.py  data_extract.py  inputs.py  interactions.py  js_helpers.py  keyboard.py  locators.py  navigation.py  screenshot.py  storage.py  tables.py  waits.py
pyshaft/pytest_pyshaft/: __init__.py  plugin.py
pyshaft/tests/: __init__.py
pyshaft/tests/data/: users.json
pyshaft/tests/examples/: __init__.py  a.py  aa.py  alex.py  api_basic_example.py  complete_example.py  pyshaft.toml  t.py  test_smoke.py
pyshaft/tests/integration/: __init__.py
pyshaft/tests/unit/: __init__.py  test_api_advanced.py  test_api_stateful.py  (+5 more)
(+197 files in other folders)
