[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyshaft"
version = "0.1.0"
description = "A Python test automation framework with semantic locators, auto-wait, and modern reporting."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "PyShaft Team" },
]
keywords = [
    "testing",
    "automation",
    "selenium",
    "web-testing",
    "api-testing",
    "semantic-locators",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "selenium>=4.0",
    "webdriver-manager>=4.0",
    "httpx>=0.24",
    "pytest>=7.0",
    "jinja2>=3.0",
    "jsonpath-ng>=1.6.0",
    "PyQt6>=6.5",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
parallel = ["pytest-xdist>=3.0"]
retry = ["pytest-rerunfailures>=12.0"]
async = ["pytest-asyncio>=0.21"]
video = ["ffmpeg-python>=0.2"]
report = ["flask>=3.0"]
schema = ["jsonschema>=4.0"]
pdf = ["pypdf>=3.0"]
visual = ["Pillow>=10.0"]
s3 = ["boto3>=1.28"]
recorder = []
all = [
    "pytest-xdist>=3.0",
    "pytest-rerunfailures>=12.0",
    "pytest-asyncio>=0.21",
    "ffmpeg-python>=0.2",
    "flask>=3.0",
    "jsonschema>=4.0",
    "pypdf>=3.0",
    "Pillow>=10.0",
    "boto3>=1.28",
]
dev = [
    "ruff>=0.1",
    "mypy>=1.5",
    "mkdocs-material>=9.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.entry-points.pytest11]
pyshaft = "pytest_pyshaft.plugin"

[project.scripts]
pyshaft = "pyshaft.cli:main"
pyshaft-recorder = "pyshaft.recorder.app:main"
pyshaft-inspect = "pyshaft.recorder.app:main"
pyshaft-inspectapi = "pyshaft.recorder.api_inspector:run_api_app"

[project.urls]
Homepage = "https://github.com/pyshaft/pyshaft"
Documentation = "https://pyshaft.dev"
Repository = "https://github.com/pyshaft/pyshaft"

[tool.hatch.build.targets.wheel]
packages = ["pyshaft", "pytest_pyshaft"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "pyshaft_scope: Override browser session scope for a specific test",
]
